--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@
 # gem 'pg'
 #
 development:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
   database: aa_plus_development
   pool: 5
